Fri Jan 16 22:32:38 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_Asynch_Stream.{h cpp}: Remove the handle_ member; use
          the handle_ inherited from ACE_Asynch_Operation.

        * tests/SSL/SSL_Asynch_Stream_Test.cpp: Register the acceptor with the
          reactor so we hear about incoming connects. Other minor mods to
          help see what's going on in the log. Hopefully will resolve
          Bugzilla #3164.

Fri Jan 16 07:26:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Token_Invariants.cpp:
        * ace/Token_Manager.cpp:
          Added missing include

Thu Jan 15 13:52:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.h:
          Doxygen changes

Thu Jan 15 13:50:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.h:
          The added name argument should have a default value of 0

Thu Jan 15 13:30:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Logging_Strategy.h:
        * ace/Service_Object.h:
          Doxygen change

        * ace/Service_Repository.{h,cpp,inl}:
          Removed the restriction that the service repository can't
          grow bigger then the size it got passed at construction. The
          plain array has been replaced with an ACE_Array_Map which
          will grow when needed. The behaviour that removing elements
          means gap in the array hasn't been changed. This fixes bugzilla
          3542

        * ace/Service_Config_Test.cpp:
          Extended this test to also test the Service Repository size
          and the behaviour that we get gaps when removing services,
          adding services after a remove will keep the gaps and just
          grows the service repository

Thu Jan 15 11:13:32 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Removed "!LabVIEW_RT", "!WinCE" and "!FUZZ" from:
            TAO/tests/POA/DSI/run_test.pl